feat: more templating + construction projects page

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,9 @@ baseURL = 'https://eirbot.eirb.fr/'
 languageCode = 'fr-fr'
 title = 'Eirbot'
 theme = "occult-eirbot"
+
+
+[[menus.main]]
+name = "Accueil"
+pageRef = '/'
+weight = 1
