--- a/themes/occult-eirbot/hugo.toml
+++ b/themes/occult-eirbot/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-US'
-title = 'My New Hugo Site'
+title = 'My new Occult-eirbot Hugo site'
 
 [[menus.main]]
 name = 'Home'
