--- a/themes/occult-eirbot/theme.toml
+++ b/themes/occult-eirbot/theme.toml
@@ -1,31 +1,20 @@
-name = 'Theme name'
+name = 'Occult-Eirbot'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
-description = 'Theme description'
+licenselink = 'https://github.com/eirbot/eirbot.eirb.fr/blob/master/themes/occult-eirbot/LICENSE'
+description = 'Web layout for the Eirbot website'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = 'https://github.com/eirbot/eirbot.eirb.fr'
 
 # If you have a running demo of the theme
-demosite = 'https://owner.github.io/repo'
+demosite = 'https://eirbot.eirb.fr'
 
 # Taxonomy terms
-tags = ['blog', 'company']
-features = ['some', 'awesome', 'features']
+tags = ['blog', 'organization']
+features = ['robotics', 'responsive', 'maintainable']
 
 # If the theme has multiple authors
 authors = [
-  {name = 'Name of author', homepage = 'Website of author'},
-  {name = 'Name of author', homepage = 'Website of author'}
+  {name = 'Thomas Horrut', homepage = ''},
+  {name = 'Tom Humbertclaude', homepage = ''}
 ]
-
-# If the theme has a single author
-[author]
-  name = 'Your name'
-  homepage = 'Your website'
-
-# If porting an existing theme
-[original]
-  author = 'Name of original author'
-  homepage = 'Website of original author'
-  repo = 'https://github.com/owner/repo'
