feat: call to beeform api with configuration
upgrade the templating and config of the contact page

--- a/themes/occult-eirbot/hugo.toml
+++ b/themes/occult-eirbot/hugo.toml
@@ -17,6 +17,10 @@ name = 'Tags'
 pageRef = '/tags'
 weight = 30
 
+[params]
+  [params.contact]
+    apiUrl = "http://localhost:3000"
+
 [module]
   [module.hugoVersion]
     extended = false
