--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,6 @@ EMAIL_PASSWORD='<a_powerful_password>'
 EMAIL_TO=notify@lists.domain.org
 ORIGIN='*'
 SMTP_PORT=465
+
+STORE_POINT=80
+URL=https://eirbot.eirb.fr/mails
