feat: volume for static files (non functional)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: eirbot-eirb-fr-www
+    volumes:
+      - ./www:/usr/share/nginx/html
     restart: unless-stopped
     env_file:
       - .env
