--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,13 @@ services:
       SMTP_PORT: ${SMTP_PORT}
 
   eirbot-eirb-fr-www:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: nginx:alpine
     container_name: eirbot-eirb-fr-www
     restart: unless-stopped
     env_file:
       - .env
+    volumes:
+      - ./nginx.default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/public:/usr/share/nginx/html
     ports:
       - '${STORE_PORT:-5173}:80'
