fix: restrict origin + gitignore + readme

--- a/.example.env
+++ b/.example.env
@@ -2,8 +2,6 @@ EMAIL_PROVIDER=smtp.domain.org
 EMAIL_USER=noreply@domain.org
 EMAIL_PASSWORD='<a_powerful_password>'
 EMAIL_TO=notify@lists.domain.org
-ORIGIN='*'
 SMTP_PORT=465
 
-STORE_POINT=80
-URL=https://eirbot.eirb.fr/mails
+STORE_PORT=80
