--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       EMAIL_USER: ${EMAIL_USER}
       EMAIL_PASSWORD: ${EMAIL_PASSWORD}
       EMAIL_TO: ${EMAIL_TO}
-      ORIGIN: ${ORIGIN}
+      ORIGIN: eirbot-eirb-fr-www
       SMTP_PORT: ${SMTP_PORT}
 
   eirbot-eirb-fr-www:
